Module 2: REST basics
* migration to java 11 since java 17 is incompatible with existing embedded servlet containers;